<resources>
    <string name="app_name">Bebek</string>
    <string name="bebek_par1">
        &#xA;Pada awal mula, yang ada adalah bebek liar atau <i>wild mallard</i> yang dikenal dengan nama ilmiah anas boscha. Tetapi ketika manusia mulai meninggalkan cara hidup nomaden atau berpindah-pindah tempat dan hidup menetap, maka kebudayaan dan peradapan manusia pun mulai berkembang. Manusia mulai bercocok tanam dan menjinakkan binatang agar menjadi hewan ternak.&#xA;
    </string>
    <string name="bebek_par2">
        &#xA;Di Indonesia sendiri, bebek pertama kali diperkenalkan oleh orang-orang India pada abad VII, terutama di wilayah pulau Jawa. Oranng-orang India tersebut merupakan ahli bangunan yang sengaja didatangkan oleh raja Syailendra untuk membangun candi-candi Hindu dan Budha di Indonesia. Adayang mengatakan bahwa motivasi ritual keagamaan yang mendorong mereka mengembangkan bebek di Indonesia. Buktinya masih bisa dilihat dalam berbagai upacara keagamaan yang ada di Bali, yakni bebek dijadikan sebagai salah satu bahan perlengkapan sesaji.
    </string>
    <string name="bebek_par3">
        &#xA;Agak sulit untuk menelusuri dan mengidentifikasikan keturunan atau galur bebek yang ada di Indonesia. Menurut Soedjai (1973), bebek lokal atau bebek asli Indonesia disebut oleh orang Belanda sebagai Indische Loopeend. Nama itu diberikan karena jika ternak ini berdiri atau berjalan maka tubuhnya tidak membentuk horizontal melainkan mendekati vertikal dan sifat ini yang membedakan bebek asli Indonesia dari bangsa bebek lain.
    </string>
    <string name="bebek_par4">
        &#xA;Sejarah pemeliharaan atau keberadaan bebek di Indonesia sudah ribuan tahun. Hal ini ditunjukkan dengan ditemukannya fosil (carving depicting duck) di situs candi Hindu di Jawa Tengah yang telah dibangun lebih dari 2000 tahun yang lalu. Berdasarkan catatan Robinson, bebek Indonesia kemungkinan terbentuk dari bebek yang berproduksi tinggi di Eropa seperti Indian Runner dan Khaki Campbell.
    </string>
    <string name="bebek_par5">
        &#xA;Penyebaran ternak bebek sangat pesat, terutama pada jaman keemasan Majapahit yang menjadi awal permulaan penyebaran dan mengembangan ternak bebek di wilayah lain Indonesia seperti Kalimantan Selatan, Sumatra, Sulawesi, dan Bali. Selain bangsa India, pemerintah kolonial belanda juga tercatat memiliki andil dalam penyebarab bebek di Indonesia melalui kuli-kuli kontrak yang bekerja dan tinggal di Sumatra pada tahun 1920, khususnya di daerah Deli dan Lampung. Saat  ini ternak bebek banyak terpusat dibeberapa daerah seperti Sumatra (Nangroe Aceh Darusalam, Sumatra Utara dan Sumatra Selatan), pulau Jawa (Cirebon, Jawa Barat, Brebes, Tegal (Jawa Tengah) dan Mojosari (Jawa Timur), Kalimantan Selatan, Sulawesi Selatan serta Bali.
    </string>
    <string name="bebek_par6">
        &#xA;Bebek merupakan unggas air, karena sebagian kehidupannya dilakukan di tempat yang berair. Hal ini ditunjukkan dari struktur fisik seperti selaput jari dan paruh yang lebar dan panjang. Selain bentuk fisik dapat juga dilihat bahwa keberadaannya di muka bumi ini,dimana bebek kebanyakan populasinya berada di daeerah dataran rendah, yang banyak dijumpai di rawa-rawa, persawahan, dan muara sungai. Daerah-daerah seperti ini dimanfaatkan oleh bebek menjadi tempat bermain dan mencari makan. Sebab itu bebek meskipun sudah dijinakkan, unggas ini cenderung lebih senang hidup dekat air karena sifatnya yang akuatik. Selain itu bebek tergolong pemakan biji-bijian, umbi-umbian, serangga dan binatang kecil. Paruhnya yang lebar tertutup selaput yang peka, dengan pinggiran paruh yang merupakan plat bertanduk membuat bebek mudah mencari makan di lingkungan tanah sawah, rawa, dan sungai. Bulu bebek berbentuk konkaf dan tebal menghadap ke tubuh. Bulu itu berminyak sehingga bila bebek sedang berada di air, bulu itu akan berdaya guna menghalangi masuknya air dan menghambat rasa dingin.
    </string>
    <string name="bebek_par7">
        &#xA;Bebek yang kita jumpai di Indonesia saat ini terdiri dari dua macam, yaitu bebek lokal dan bebek hasil persilangan. Bebek lokal merupakan keturunan bebek liar malard (Anas plathyrinchos) yang telah mengalami domestikasi dalam waktu yang lama. Akibat proses domestikasi tersebut bebek mengalami perubahan-perubahan sesuai dengan kemampuan adaptasi terhadap lingkungan dimana bebek tersebut hidup. Bebek inilah yang kemudian tersebar dan berkembang dengan mempunyai nama sesuai nama daerah tempat bebek tersebut berkembang.
    </string>
    <string name="bebek_par8">
        &#xA;Bebek yang berkembag dari masa ke masa, koni menjadi ternak yang penting dalam kehidupan masyarakat Indonesia. Data yang dikeluarkan WhO (World Health Organization) menempatkan Indonesia dengan stok bebek ketiga terbesar di dunia ( sekitar 46,3 juta ekor) dibawah China (511,8 ekor) dan Vietnam (sekitar 50 juta ekor). Pada tahun 1999 ketiga negara ini menempatkan Asia sebagai pemilik stok bebek terbesar di dunia, yakni sekitar 670 ekor (setara dengan 2.041 juta ton daging) dari stok dunia yang mendekati angka 800 juta ekor. Eropa menempati urutan kedua, sekitar 68,4 juta ekor setara dengan 371,4 juta ton daging. Urutan ketiga adalah Amerika Latin, sekitar 20,8 juta ekor setara dengan 51,25 juta ton daging. Sementara itu, Afrika berada di urutan ke empat, sekitar 15,7 juta ekor setara dengan 54,66 juta ton daging, dan Amerika Utara (termasuk AS) berada di urutan kelima, sekitar 7,6 juta ekor setara dengan 52 juta ton daging.
    </string>
    <string name="telur_par1">
        Telur bebek merupakan salah satu komoditas utama yang dihasilkan oleh bebek petelur. Telur bebek mempunyai 2 tujuan penggunaan yaitu untuk telur konsumsi dan telur tetas. Telur bebek konsumsi dijual atau diperdagangkan dalam keadaansegar atau olahan. Olahan telur bebek yang paling banyak dikenal adalah telur asin. Telur konsumsi dihasilkan oleh bebek bisa tanpa melalui perkawinan. Sedangkan telur tetas merupakan telur itik yang fertil yang dihasilkan dari perkawinan bebek betina dan bebek jantan.
    </string>
    <string name="telur_par2">
        Telur bebek merupakan salah satu sumber protein hewani yang memiliki rasa yang sangat lezat, mudah dicerna dan bergizi tinggi. Telur bebek umumnya berukuran besar dan warna kerabang putih sampai hijau kebiruan. Rata-rata bobot telur bebek adalah 60--75 g. Keunggulan telur bebek dibandingkan dengan telur unggas lainnya antara lain kaya akan mineral, vitamin B6, asam pantotenat, tiamin, vitamin A, vitamin E, niasin, dan vitamin B12. Selain keunggulan, telur bebek juga mempunyai kekurangan dibandingkan dengan telur unggas lainnya yaitu mempunyai kandungan asam lemak jenuh yang tinggi sehingga merangsang peningkatan kadar kolesterol darah. Kadar kolesterol telur bebek kira-kira 2 kali lipat dibandingkan dengan telur ayam.
    </string>
    <string name="telur_par3">
       Telur asin adalah istilah umum untuk masakan berbahan dasar telur yang diawetkan dengan cara diasinkan (diberikan garam berlebih untuk menonaktifkan enzim perombak). Kebanyakan telur yang diasinkan adalah telur itik, meski tidak menutup kemungkinan untuk telur-telur yang lain. Telur asin baik dikonsumsi dalam waktu satu bulan (30 hari).
    </string>
    <string name="telur_par4">
        Di Indonesia, terutama di pulau Jawa telur asin biasanya diproduksi dash telur bebek pelari (Anas platyrhynchos domesticus) yang memiliki ciri khas cangkang telur yang berwarna biru.Panganan ini bersifat praktis dan dapat dipadukan dengan berbagai masakan misalnya nasi jamblang, dan nasi lengko, bahkan dapat pula dimakan tanpa nasi. Nelayan yang melaut atau orang yang bepergian untuk waktu lama biasa membawa telur asin untuk bekal.
    </string>
    <string name="telur_par5">
        Di Jawa Tengah, daerah Brebes dikenal sebagai penghasil utama telur asin. Industri telur asin di Brebes cukup meluas hingga tersedia berbagai pilihan kualitas telur asin. Masing-masing produsen memiliki cap sendiri-sendiri yang biasanya dapat dilihat pada kulit telur. Walaupun selera orang berbeda-beda, telur asin yang dinilai berkualitas tinggi memiliki ciri-ciri bagian kuning telur berwarna jingga terang hingga kemerahan, "kering" (jika digigit tidak mengeluarkan cairan), tidak menimbulkan bau amis, dan rasa asin tidak menyengat.
    </string>
    <string name="telur_par6">
        Di Jawa Timur juga mulai banyak menjual berbagai jenis telur asin, mulai yang original sampai yang rasa-rasa, ada juga telur asin yang warna kuningnya kemerah-merahan, ada juga telur asin organik dan telur asin herbal yang mulai ramai produksi di Kecamatan Singojuruh Kab. Banyuwangi.
    </string>
    <string name="pete_par1">
        Sarana utama budidaya itik petelur adalah kandang. Kandang ren dinilai cocok dan banyak dipakai dalam budidaya itik semi intensif. Kandang ren dibagi dua ruangan utama: ruang istirahat (bertelur) dan pelataran tempat bermain (playangan).
    </string>
    <string name="pete_par2">
        Ruangan istirahat berupa ruangan beratap seperti rumah joglo, berlantaikan tanah yang dilapisi alas (litter). Di tempat inilah itik beristirahat pada malam hari dan bertelur pada dini hari. Lebar ruangan istirahat disesuaikan dengan kapasitas itik yang akan dipelihara.
    </string>
    <string name="pete_par3">
        Idealnya 4 ekor itik menempati ruang 1m2. Jadi bila ingin memelihara 600 ekor itik petelur misalnya, diperlukan area kurang lebih 150 m2. Lahan seluas ini dibagi dua, separuh untuk kandang tertutup dan selebihnya untuk pelataran.Misalkan kandang dibuat 25 m x 6 m, berarti satu sekat ruang istirahat dan pelataran masing-masing luasnya 3 m x 5 m. Jumlah ruangan 5 unit, setiap unit dihuni 120 ekor itik. Hindari atap bocor bila hujan.Pilihan bahan baku atap antara lain genteng, asbes, plastic tau rumbia.
    </string>
    <string name="pete_par4">
        Rumbia lebih disukai peternak. Selain harganya murah ia dapat menahan panas. Rangka dan penyangga terbuat dari kayu atau bambu. Agar peternak mudah masuk ke kandang, tinggi atap 2,5 m – 3 m dari lantai. Bagian belakang dan samping kiri-kanan kandang ditutup tembok atau bilik bambu.
    </string>
    <string name="pete_par5">
        Untuk menjamin lancarnya sirkulasi udara, antara ruang istirahat dan pelataran dibuat terbuka. Pemba tas ruangan hanya berupa sekat/pagar bambu atau kayu setinggi 50 cm – 60 cm. Lantai kandang yang empuk dan kering merangsang itik bertelur. Alas lantai berupa jerami, sekam, serbuk gergaji atau rum put kering. Bahan lain, asalkan empuk, tidak mudah padat, kering, agak lembap, hangat, bersih dan dapat mencegah telur tidak ampai pecah.
    </string>
    <string name="pete_par6">
       Untuk mempertahankan kondisi kandang tetap baik, tanah diberi kapur sebelum diberi alas. Tujuannya, untuk mencegah penyakit dan mengurangi bau karena kotoran itik. Dengan perlakuan ini kandang bisa dibersihkan total setelah dua tahun. Cara lain mengantisipasi serangan penyakit adalah menyemprot tanah dengan larutan formalin 5 persen.
    </string>
    <string name="pete_par7">
        Sediakan bak besar yang selain sebagai tepmat air minum juga pengganti kolam permandian. Wadahnya berupa plastik atau parit panjang. Kedalamannya diatur sedemikian rupa. Yang penting leher itik bisa terendam. Air minum itik harus diganti 3-5 kali sehari.
    </string>
    <string name="pete_par8">
        Ruang istirahat dan playangan perlu dibuatkan sekat. Sekat bisa dibuat dari batu bata, pagar kayu atau bambu. Tingginya cukup 50 cm – 60 cm. Pada siang hari itik sebaiknya berada di luar kandang istirahat. Meski ada juga beberapa peternak membebaskan itik mereka keluar masuk kandang sesukanya.
    </string>
</resources>